--- a/miniprogram/pages/music/music.wxml
+++ b/miniprogram/pages/music/music.wxml
@@ -8,7 +8,7 @@ interval="3000" duration="1700" class="swiper">
 
 <text class="title">场景歌单</text>
 <view class="playlist-container">
-  <block wx:for="{{playlist}}" wx:key="id">
+  <block wx:for="{{playlist}}" wx:key="_id">
     <x-playlist playlist="{{item}}"></x-playlist>
   </block>
 </view>
