--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -4,14 +4,14 @@
 <view class="player-mask"></view>
 
 <view class="player-info">
-   <view class="player-disc">
-      <image class="player-img" src="{{picUrl}}"></image>
+   <view class="player-disc {{isPlaying?'playing':''}}">
+      <image class="player-img zhuan{{isPlaying?'':'ting'}}"   src="{{picUrl}}"></image>
    </view>
 
 <view class="=control">
-   <text class="iconfont icon-shangyishou"></text>
-   <text class="iconfont icon-bofang1"></text>
-   <text class="iconfont icon-xiayishou"></text>
+   <text class="iconfont icon-shangyishou" bing:tap="onPrev"></text>
+   <text class="iconfont {{isPlaying? 'icon-zanting':'icon-bofang1'}}" bind:tap ="togglePlaying"></text>
+   <text class="iconfont icon-xiayishou" bind:tap="onNext"></text>
 
    </view>
 </view>
