--- a/miniprogram/pages/player/player.wxss
+++ b/miniprogram/pages/player/player.wxss
@@ -44,15 +44,15 @@
   position: absolute;
   top: -150rpx;
   left: 266rpx;
-  background:url('https://du929.oss-cn-hangzhou.aliyuncs.com/img/disc.png') no-repeat center/contain;
-  transform:rotate(-15deg);
-  transform-origin:24rpx 10rpx;
+  background:url('https://du929.oss-cn-hangzhou.aliyuncs.com/img/zhen.png') no-repeat center/contain;
+  transform: rotate(-15deg);
+  transform-origin: 24rpx 10rpx;
   transition:transform 0.8s ease;
 }
-
-.playing.player-desc::after{
+.playing.player-disc::after{
   transform: rotate(0deg);
 }
+
 .player-img{
   width: 368rpx;
   height: 368rpx;
@@ -81,7 +81,7 @@
 
 .control{
   position: absolute;
-  bottom: 8%;
+  bottom: 10%;
   left: 50%;
   transform:translateX(-50%);
   display: flex;
@@ -97,7 +97,14 @@
 }
 
 .icon-bofang1, .icon-zanting{
-  font-size:120rpx;
+  font-size:100rpx;
   margin:0 50rpx;
 }
 
+.progress-bar{
+  width: 90%;
+  position: absolute;
+  left: 50%;
+  transform:translateX(-50%);
+  bottom: 24%;
+}
