--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -4,12 +4,14 @@
 <view class="player-mask"></view>
 
 <view class="player-info">
-   <view class="player-disc {{isPlaying?'playing':''}}">
+   <view class="player-disc {{isPlaying?'playing':''}}" hidden="{{isLyricShow}}" bind:tap="onLyricShow">
       <image class="player-img zhuan{{isPlaying?'':'ting'}}"   src="{{picUrl}}"></image>
    </view>
 
+
+<x-lyric isLyricShow="{{isLyricShow}}" lyric="{{lyric}}" bind:tap="onLyricShow"></x-lyric>
 <view class="progress-bar">
-<x-progress-bar bind:musicEnd="onNext"/>
+<x-progress-bar bind:musicEnd="onNext" />
 </view>
 
 <view class="=control">
